:sparkles: Git push origin main

--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -26,7 +26,7 @@
                     {% endif %}
 
                     <h3>A quoi ça sert ?</h3>
-                    <p>Cet outil vous permet de calculer le coup d'un point d'expérience en fonction de la ressource et de son prix.</p>
+                    <p>Cet outil vous permet de calculer le pourcentage de profit d'une ressource en fonction de l'expérience de son prix.</p>
                     <h3>Comment ça fonctionne ?</h3>
                     <ol class="list-decimal list-inside grid gap-2">
                         <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
@@ -59,7 +59,7 @@
                     {% endif %}
 
                     <h3>A quoi ça sert ?</h3>
-                    <p>Cet outil vous permet de calculer le pourcentage de profit d'une ressource en fonction de son expérience donnée au familier et de son prix.</p>
+                    <p>Cet outil vous permet de calculer le coup d'un point d'expérience en fonction de la ressource et de son prix.</p>
                     <h3>Comment ça fonctionne ?</h3>
                     <ol class="list-decimal list-inside grid gap-2">
                         <li>Renseignez simplement la ressource souhaitée et son prix à <strong>l'unité</strong>.</li>
