--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -52,9 +52,13 @@
                     {{ form_row(formXpPetNumber.submit) }}
                     {{ form_end(formXpPetNumber) }}
 
-                    {% if profitability is not null %}
+                    {% if profitability %}
                         <div class="grid gap-4 justify-center">
                             <div>Rentabilité : <strong class="text-green-400">{{ number }} kamas</strong></div>
+                        </div>
+                    {% else %}
+                        <div class="grid gap-4 justify-center">
+                            <div>Rentabilité : <strong class="text-green-400">Inconnu</strong></div>
                         </div>
                     {% endif %}
 
