--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -21,7 +21,7 @@
 
                     {% if profitability is not null %}
                         <div class="grid gap-4 justify-center">
-                            <div>Rentabilité : <strong class="text-green-400">{{ profitability }}%</strong></div>
+                            <div>Rentabilité : <strong class="text-green-400">{{ profitability|number_format(2) }}%</strong></div>
                         </div>
                     {% endif %}
 
@@ -92,20 +92,20 @@
             <table class="w-full text-left rtl:text-right">
                 <thead class="text-xs uppercase">
                 <tr class="border-b border-gray-300 dark:border-gray-700">
-                    <th scope="col" class="p-2 ">
+                    <th scope="col" class="p-2 hidden xl:table-cell">
                         <span class="hidden sm:block text-xs"></span>
                         <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family"></span>
                     </th>
-                    <th scope="col" class="p-2 hidden xl:table-cell">
-                        <span class="hidden sm:block text-xs">Nom de l'</span>
+                    <th scope="col" class="p-2">
+                        <span class="block text-xs">Nom de l'</span>
                         <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
                     </th>
                     <th scope="col" class="p-2 hidden xl:table-cell">
                         <span class="sm:block text-xs">Level de l'</span>
                         <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
                     </th>
-                    <th scope="col" class="p-2 hidden xl:table-cell">
-                        <span class="hidden sm:block text-xs">Xp de l'</span>
+                    <th scope="col" class="p-2">
+                        <span class="block text-xs">Xp de l'</span>
                         <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">item</span>
                     </th>
                 </tr>
@@ -120,7 +120,7 @@
                         </td>
                         <td class="p-2">{{ resource.getName() }}</td>
                         <td class="p-2 hidden xl:table-cell">{{ resource.getLevel() }}</td>
-                        <td class="p-2 hidden xl:table-cell">{{ resource.getXpPet }}</td>
+                        <td class="p-2">{{ resource.getXpPet == resource.getXpPet|number_format(0) ? resource.getXpPet|number_format(0) : resource.getXpPet|number_format(2) }}</td>
                     </tr>
                 {% else %}
                     <tr class="border-b border-gray-300 dark:border-gray-700">
