:lipstick: Style on XPETifus
git push origin main

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -42,7 +42,7 @@
                     <span class="ml-6 font-semibold text-sm">Records</span>
                 </a>
                 <a href="{{ path("app_xp_pet") }}" class="nav-item">
-                    <i data-feather="award" class="nav-item-icon"></i>
+                    <i data-feather="gitlab" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">XPETifus</span>
                 </a>
                 <a href="{{ path("app_documentation") }}" class="nav-item">
