--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,6 @@
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
-        {{ encore_entry_script_tags('randomAdvice') }}
         {{ encore_entry_script_tags('popup') }}
     {% endblock %}
 
@@ -50,6 +49,7 @@
 
 <body class="bg-cover bg-center bg-fixed flex">
     <div {{ react_component('ThemeToggle') }}></div>
+    <div {{ react_component('Advices') }}></div>
     {% include('includes/sidebar.html.twig') %}
     {% include('includes/footer.html.twig') %}
 
@@ -71,18 +71,5 @@
 
         {% endblock %}
     </section>
-
-    <div id="advicePopup" class="popup bg-green-100 border-t-4 border-green-500 rounded-lg text-green-900 px-4 py-3 shadow-md" role="alert">
-        <div class="popup-content flex">
-            <div class="py-1 mr-4">
-                <i data-feather="help-circle" class="text-primary-600"></i>
-            </div>
-            <div>
-                <p class="font-bold">Point Conseil !</p>
-                <p id="adviceText" class="text-sm">Make sure you know how these changes affect you.</p>
-            </div>
-            <i data-feather="x" class="close-btn"></i>
-        </div>
-    </div>
 </body>
 </html>
