--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -9,27 +9,27 @@
   }
 
   &-green {
-    @apply flex items-center p-4 text-sm text-green-500 border border-green-300 rounded-lg dark:bg-gray-900 dark:text-green-400 dark:border-green-400 bg-white;
+    @apply flex items-center p-4 text-sm text-green-500 border border-green-300 rounded-lg dark:bg-gray-900 dark:text-green-400 dark:border-green-400 bg-gray-100;
   }
 
   &-orange {
-    @apply flex items-center p-4 text-sm text-orange-500 border border-orange-300 rounded-lg dark:bg-gray-900 dark:text-orange-400 dark:border-orange-400 bg-white;
+    @apply flex items-center p-4 text-sm text-orange-500 border border-orange-300 rounded-lg dark:bg-gray-900 dark:text-orange-400 dark:border-orange-400 bg-gray-100;
   }
 
   &-red {
-    @apply flex items-center p-4 text-sm text-red-500 border border-red-300 rounded-lg dark:bg-gray-900 dark:text-red-400 dark:border-red-400 bg-white;
+    @apply flex items-center p-4 text-sm text-red-500 border border-red-300 rounded-lg dark:bg-gray-900 dark:text-red-400 dark:border-red-400 bg-gray-100;
   }
 
   &-blue {
-    @apply flex items-center p-4 text-sm text-blue-500 border border-blue-300 rounded-lg dark:bg-gray-900 dark:text-blue-400 dark:border-blue-400 bg-white;
+    @apply flex items-center p-4 text-sm text-blue-500 border border-blue-300 rounded-lg dark:bg-gray-900 dark:text-blue-400 dark:border-blue-400 bg-gray-100;
   }
 
   &-pink {
-    @apply flex items-center p-4 text-sm text-pink-500 border border-pink-300 rounded-lg dark:bg-gray-900 dark:text-pink-400 dark:border-pink-400 bg-white;
+    @apply flex items-center p-4 text-sm text-pink-500 border border-pink-300 rounded-lg dark:bg-gray-900 dark:text-pink-400 dark:border-pink-400 bg-gray-100;
   }
 
   &-yellow {
-    @apply flex items-center p-4 text-sm text-yellow-500 border border-yellow-300 rounded-lg dark:bg-gray-900 dark:text-yellow-400 dark:border-yellow-400 bg-white;
+    @apply flex items-center p-4 text-sm text-yellow-500 border border-yellow-300 rounded-lg dark:bg-gray-900 dark:text-yellow-400 dark:border-yellow-400 bg-gray-100;
   }
 
   &-p-0 {
