:pencil2: Fix mention for dofusDB

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
     <div class="wrapper-style wrapper">
         <div class="wrapper wrapper-yellow uppercase justify-center">
             <i class="hidden md:block" data-feather="alert-triangle"></i>
-            <p class="md:mx-4">Aucun bot n'est utilisé sur ce site web. Ni aucun système de lecture de donnée du jeu. Tout doit être renseigné manuellement.</p>
+            <p class="md:mx-4">Aucun bot n'est utilisé sur ce site web. Ni aucun système de lecture de donnée du jeu hormis les données disponibles via l'<a class="link" href="https://dofusdb.fr/fr/">API DofusDB</a>. Tout le reste doit être renseigné manuellement.</p>
             <i class="hidden md:block" data-feather="alert-triangle"></i>
         </div>
     </div>
