--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -39,6 +39,7 @@
                     Certaines illustrations sont la propriété d'Ankama Studio et de Dofus - Tous droits réservés.
                     "monifus.fr" est un site non-officiel sans aucun lien avec Ankama.
                 </p>
+                <p class="mt-8 text-xs leading-6 text-center text-gray-400">La plupart des données proviennent de l'<a class="link" href="https://dofusdb.fr/fr/">API DofusDB</a>.</p>
             </div>
         </section>
         <button id="closeWindow" class="flex absolute top-0 right-0 text-primary-400">
