:sparkles: Auto date on sale

--- a/templates/sale/includes/_form.html.twig
+++ b/templates/sale/includes/_form.html.twig
@@ -13,3 +13,24 @@
     </div>
 </div>
 {{ form_end(form) }}
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById('sale_isSell').addEventListener('change', function() {
+            const dateVenteField = document.getElementById('sale_sellDate');
+
+            if (this.checked) {
+                const now = new Date();
+                const year = now.getFullYear();
+                const month = String(now.getMonth() + 1).padStart(2, '0'); // Janvier est 0
+                const day = String(now.getDate()).padStart(2, '0');
+                const hours = String(now.getHours()).padStart(2, '0');
+                const minutes = String(now.getMinutes()).padStart(2, '0');
+
+                dateVenteField.value = year + '-' + month + '-' + day + 'T' + hours + ':' + minutes;
+            } else {
+                dateVenteField.value = '';
+            }
+        });
+    });
+</script>
