--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -34,6 +34,12 @@
                 <i data-feather="coffee" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Me Soutenir</span>
             </a>
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path("app_admin") }}" class="nav-item group/icon">
+                    <i data-feather="lock" class="nav-item-icon"></i>
+                    <span class="nav-item-text group-hover:block">Admin</span>
+                </a>
+            {% endif %}
 
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <a href="{{ path("app_logout") }}" class="nav-item group/icon mt-16">
