:recycle: Monitor rework again

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -29,7 +29,7 @@
                     <i data-feather="user" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Profil</span>
                 </a>
-                <a href="{{ path('app_monitor_index') }}" class="nav-item">
+                <a href="{{ path('app_price_index') }}" class="nav-item">
                     <i data-feather="activity" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Moniteurs</span>
                 </a>
