--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -10,7 +10,7 @@
                 <i data-feather="user" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Profil</span>
             </a>
-            <a href="{{ path('app_monitor_index') }}" class="nav-item group/icon">
+            <a href="{{ path('app_price_index') }}" class="nav-item group/icon">
                 <i data-feather="activity" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Moniteurs</span>
             </a>
