--- a/templates/price/show.html.twig
+++ b/templates/price/show.html.twig
@@ -7,10 +7,20 @@
         <div class="grid gap-4">
             <section class="wrapper wrapper-style flex justify-between">
                 <div class="grid gap-2">
-                    <h1 class="text-4xl">{{ monitor.resource.name }}</h1>
-                    <p class="flex items-center uppercase text-xs">Nombre de moniteurs : <span class="ml-2 text-green-400 font-bold">{{ aggregates.priceCount }}</span></p>
+                    <h1 class="text-4xl">
+                        {% if prices|length > 0 %}
+                            Détails de la Ressource : {{ prices[0].Resource.name }}
+                        {% else %}
+                            Aucune donnée de prix disponible pour cette ressource
+                        {% endif %}
+                    </h1>
+                    <p class="flex items-center uppercase text-xs">Nombre de moniteurs : <span class="ml-2 text-green-400 font-bold">{{ priceCount }}</span></p>
                 </div>
-                <img class="h-20 w-20" src="{{ monitor.resource.imgUrl }}" alt="Image de la ressource {{ monitor.resource.imgUrl }}">
+                {% if prices|length > 0 %}
+                    <img class="h-20 w-20" src="{{ prices[0].Resource.imgUrl }}" alt="Image de la ressource {{ prices[0].Resource.imgUrl }}">
+                {% else %}
+                    Aucune donnée de prix disponible pour cette ressource
+                {% endif %}
             </section>
         </div>
 
@@ -19,21 +29,21 @@
             <div class="wrapper wrapper-style grid gap-4">
                 <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">1</span></p>
                 <div class="flex items-center dark:text-white">
-                    <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceOne|number_format(0, '.', ' ') }}</span>
+                    <span class="text-4xl font-bold leading-6">{{ avgPriceOne|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
             </div>
             <div class="wrapper wrapper-style grid gap-4">
                 <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">10</span></p>
                 <div class="flex items-center dark:text-white">
-                    <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceTen|number_format(0, '.', ' ') }}</span>
+                    <span class="text-4xl font-bold leading-6">{{ avgPriceTen|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
             </div>
             <div class="wrapper wrapper-style grid gap-4">
                 <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">100</span></p>
                 <div class="flex items-center dark:text-white">
-                    <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceHundred|number_format(0, '.', ' ') }}</span>
+                    <span class="text-4xl font-bold leading-6">{{ avgPriceHundred|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
             </div>
@@ -41,7 +51,7 @@
 
         <section>
             <div class="wrapper wrapper-style wrapper-p-0 text-sm">
-                {{ include('monitor/includes/_detailsMonitor.html.twig') }}
+                {{ include('price/includes/_detailsPrice.html.twig') }}
             </div>
         </section>
     </main>
