:bug: Bug on about
bug on about

--- a/templates/home/includes/_about.html.twig
+++ b/templates/home/includes/_about.html.twig
@@ -28,7 +28,7 @@
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Économie du Jeu Maîtrisée</h2>
             <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">Monifus offre une plateforme unique où vous pouvez ajouter et consulter les prix des ressources du jeu. Obtenez des analyses détaillées comme la moyenne des prix pour planifier vos prochaines stratégies commerciales.</p>
             <div class="flex md:justify-start justify-center">
-                <a href="{{ path('app_monitor_index') }}" class="form-submit">
+                <a href="{{ path('app_price_index') }}" class="form-submit">
                     Créer un moniteur
                     <i class="ml-2" data-feather="arrow-right"></i>
                 </a>
