:bug: Fix bug on new

--- a/templates/price/new.html.twig
+++ b/templates/price/new.html.twig
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        {{ include('monitor/includes/_form.html.twig') }}
+        {{ include('price/includes/_form.html.twig') }}
 
         <div class="flex justify-center space-x-4">
             <a class="form-submit" href="{{ path('app_monitor_index') }}">Retour</a>
