--- a/templates/documentation/includes/_sales.html.twig
+++ b/templates/documentation/includes/_sales.html.twig
@@ -96,7 +96,7 @@
     </div>
 
     <div class="flex justify-center space-x-4">
-        <a class="form-submit" href="{{ path("app_monitor_index") }}">Accueil</a>
+        <a class="form-submit" href="{{ path("app_price_index") }}">Accueil</a>
         <a class="form-submit" href="{{ path("app_sale") }}">Ventes</a>
     </div>
 </div>
