--- a/templates/price/new.html.twig
+++ b/templates/price/new.html.twig
@@ -20,7 +20,7 @@
         {{ include('price/includes/_form.html.twig') }}
 
         <div class="flex justify-center space-x-4">
-            <a class="form-submit" href="{{ path('app_monitor_index') }}">Retour</a>
+            <a class="form-submit" href="{{ path('app_price_index') }}">Retour</a>
         </div>
     </section>
 {% endblock %}
