--- a/templates/price/show.html.twig
+++ b/templates/price/show.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
     <main class="grid gap-4">
+        <div class="flex justify-center">
+            <a class="form-submit" href="{{ path('app_price_new') }}">Ajouter moniteur</a>
+        </div>
         <div class="grid gap-4">
             <section class="wrapper wrapper-style flex justify-between">
                 <div class="grid gap-2">
