--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -39,7 +39,7 @@
 
                         <p class="mt-2 text-gray-500 dark:text-gray-400 ">Retournez à vos moniteurs</p>
 
-                        <a href="{{ path('app_monitor_index') }}" class="inline-flex items-center mt-4 text-sm text-blue-500 gap-x-2 dark:text-blue-400 hover:underline">
+                        <a href="{{ path('app_price_index') }}" class="inline-flex items-center mt-4 text-sm text-blue-500 gap-x-2 dark:text-blue-400 hover:underline">
                             <span>Voir</span>
 
                             <i data-feather="arrow-right"></i>
