fix on sale new

--- a/templates/sale/new.html.twig
+++ b/templates/sale/new.html.twig
@@ -13,7 +13,7 @@
             <div class="wrapper wrapper-yellow lg:space-x-4">
                 <i class="hidden lg:block" data-feather="alert-triangle"></i>
                 <p><strong>Attention : </strong>Les ventes ne sont la <strong>QUE</strong> pour les <strong>équipements</strong>. Pour les ressources, ajoutez plutôt un
-                    <a class="text-tertiary-400" href="{{ path("app_monitor_new") }}">moniteur</a></p>
+                    <a class="text-tertiary-400" href="{{ path("app_price_new") }}">moniteur</a></p>
             </div>
         </div>
 
