--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,7 +49,7 @@
                     <span>Connexion avec Discord</span>
                 </a>
 
-                <a href="#" class="text-center link">Mot de passe oublié?</a>
+                <a href="{{ path('app_forgot_password_request') }}" class="text-center link">Mot de passe oublié?</a>
 
                 <p class="text-sm text-center font-light text-gray-500 dark:text-gray-400">
                     Pas encore inscrit ?
