:safety_vest: Guild page feature

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -45,6 +45,10 @@
                     <i data-feather="gitlab" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">XPETifus</span>
                 </a>
+                <a href="{{ path("app_guild") }}" class="nav-item">
+                    <i data-feather="book" class="nav-item-icon"></i>
+                    <span class="ml-6 font-semibold text-sm">Documentation</span>
+                </a>
                 <a href="{{ path("app_documentation") }}" class="nav-item">
                     <i data-feather="book" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Documentation</span>
