--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -30,6 +30,10 @@
                 <i data-feather="book" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Documentation</span>
             </a>
+            <a href="{{ path("app_guild") }}" class="nav-item group/icon">
+                <i data-feather="shield" class="nav-item-icon"></i>
+                <span class="nav-item-text group-hover:block">Guifus</span>
+            </a>
             <a href="https://www.buymeacoffee.com/monifus" class="nav-item group/icon text-tertiary-400">
                 <i data-feather="coffee" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Me Soutenir</span>
