:bug: Url + manage button on page guild

--- a/templates/guild/includes/_content.html.twig
+++ b/templates/guild/includes/_content.html.twig
@@ -36,11 +36,19 @@
 
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {% if guild == app.user.guild %}
+                {# Utilisateur connecté et sur la page de sa propre guilde #}
                 <a href="{{ path('app_guild_leave', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-youtube">Quitter la guilde</a>
             {% endif %}
+
+            {% if isLeader == false and guild != app.user.guild %}
+                <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
+            {% endif %}
         {% else %}
+            {# Utilisateur non connecté #}
             <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit">Rejoindre la guilde</a>
         {% endif %}
+
+
     </div>
 
 </div>
