:lipstick: Fix style

--- a/templates/guild/show.html.twig
+++ b/templates/guild/show.html.twig
@@ -31,6 +31,10 @@
         <button class="form-submit mx-auto" id="copyButton" data-text="Copier lien">Copier lien</button>
     </div>
 
+    <div class="dark:text-white grid gap-2 mt-6">
+        <p>Vous voulez créer votre page ?</p>
+        <a class="form-submit form-submit-green mx-auto" href="{{ path('app_guild') }}">Cliquez ici !</a>
+    </div>
     <p class="mt-2 text-xs">Propulsé par <a class="link" href="https://monifus.fr/">Monifus.fr</a></p>
 
 
