--- a/templates/guild/includes/_content.html.twig
+++ b/templates/guild/includes/_content.html.twig
@@ -13,10 +13,10 @@
         </div>
         <div class="flex justify-between">
             <div class="flex justify-between">
-                <i class="w-4 mr-2 text-primary-500" data-feather="server"></i>
+                <i class="w-4 mr-2 text-primary-500" data-feather="users"></i>
                 <p class="font-bold">Membres : </p>
             </div>
-            <p class="text-tertiary-400 font-bold">{{ guild.members|length }}</p>
+            <p class="text-green-400 font-bold">{{ guild.members|length }}</p>
         </div>
     </div>
 
@@ -45,10 +45,7 @@
             {% endif %}
         {% else %}
             {# Utilisateur non connecté #}
-            <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit">Rejoindre la guilde</a>
+            <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
         {% endif %}
-
-
     </div>
-
 </div>
